--- a/job-log/20161205.md
+++ b/job-log/20161205.md
@@ -1,5 +1,5 @@
 ### 2016-12-05 工作日志###
-
+_____
 
 |项目名称|任务描述|任务状态|
 |:----------|:-------|:---------|
@@ -11,6 +11,30 @@
 |**atom IDE**|atom + github for windows.exe 部署  DEV-PC: win10-dev-192.201.200.104|**0%**|
 
 
-### 2016-12-05 工作日志###
+### 2016-12-08 工作日志###
+
+
+
+Q1: tomcat   CATALINA_HOME,CATALINA_BASE 区别?  Topic: ** Tomcat **
+
+```
+
+The description below uses the variable name $CATALINA_BASE to refer the base directory against which most relative paths are resolved. If you have not configured Tomcat for multiple instances by setting a CATALINA_BASE directory, then $CATALINA_BASE will be set to the value of $CATALINA_HOME, the directory into which you have installed Tomcat.
+
+引用:
+
+https://tomcat.apache.org/tomcat-7.0-doc/manager-howto.html#Introduction
+
+```
+
+>1.CATALINA_HOME      
+
+>Tomcat.exe 程序的安装路径  
+
+>2.CATALINA_BASE      
+
+>Tomcat.exe 工作路径,包括 conf、logs、temp、webapps、work和shared拷贝   
+
+
 
 ---
